                W I N G   C H A N G E S
----------------------------------------------------------
This file tracks the changes to Wing over time. Especially
with respect to new features and compatibility changes.
==========================================================

2018-07-01
 * Made idea sorting pluggable.
 * Added incomprehensible option to ideas.

2018-06-25
 * Gave Session a self relationship.
 * Added an error message if you don't pass in a api url for wing.vue.js delete().
 * Fixed a bug in error handling in wing.vue.js delete.
 * Added wing.base_uri property to wing.vue.js.
 * wing.vue.js now requires <script src="https://cdn.jsdelivr.net/npm/qs@6.5.2/dist/qs.js"></script>.

2018-06-22
 * libpng should be compiled with Wing because the RPMs found in many places don't contain pngfix.

2018-06-20
 * Use MooseX::NonMoose to convert Wing::DB::Result and set defaults.

2018-06-19
 * Migrate Wing to use the latest Perl (5.26.2) and modules.
 * Removed start_web.sh (and related scripts) in favor of wing commands.
    wing web --start
    wing web --stop
    wing rest --start
    wing rest --stop
 * Added wing command to start and stop wingman.
    wing wingman --start
    wing wingman --restart
    wing wingman --stop
    wing wwingman --start --watchself

2018-04-30
 * Change X-HTTP-Real-IP in nginx.conf to use $http_x_forwarded_for instead of $remote_addr to be compatible with Amazon load balancer.
 * Added last_op to lib/Wing/Role/User.pm
 * Will need to do a DB upgrade on app.

2018-04-18
 * Notify about cookies.

2018-04-10
 * Added 2-factor authentication for GDPR compliance.
 * NOTE: You need to add var/init/var/mkits/secondary_auth.mkit to your mkits.

2018-04-04
 * Better error handling in wing.object and wing.object_list in wing.vue.js.
 * Added new round() filter to wing.vue.js.
 * wing.object and wing.object_list now have fetch_api, list_api, and create_api exposed as properties.

2018-03-30
 * Added wing.vue.js get_query_param().