@@ -4,6 +4,9 @@ This file tracks the changes to Wing over time. Especially
 with respect to new features and compatibility changes.
 ==========================================================
 
+2018-07-11
+ * Add a very basic Javascript neutralizer to Wing::ContentFilter.
+
 2018-07-01
  * Made idea sorting pluggable.
  * Added incomprehensible option to ideas.
